[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "python_dec_php_enc"
authors = [
    {name = "Rahul Anil", email = "rahulanil101@gmail.com"}
]
description = "A template for python projects"
version = "0.0.1"
dynamic = ["dependencies", "optional-dependencies"]
readme = "README.md"

[tools.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }
optional-dependencies.dev = { file = ["dev-requirements.in"] }

[tool.black]
line-length = 80

[tool.pylint]
max-line-length = 80

[tool.isort]
profile = "hug"